Sessions: Save session on document open and close

BUG: 437337